--- a/app.json
+++ b/app.json
@@ -3,12 +3,15 @@
     "name": "pokefight",
     "slug": "pokefight",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "landscape",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
+    },
+    "androidNavigationBar": {
+      "visible": "sticky-immersive"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
