--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@expo/vector-icons": "^10.2.1",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/progress-bar-android": "^1.0.4",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo": "~39.0.2",
+    "expo-av": "~8.6.0",
     "expo-screen-orientation": "^2.0.0",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
@@ -21,8 +23,7 @@
     "react-native-gesture-handler": "^1.9.0",
     "react-native-screens": "^2.15.0",
     "react-native-web": "~0.13.12",
-    "styled-components": "^5.2.1",
-    "expo-av": "~8.6.0"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
